--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^16.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "moment": "^2.30.1",
+    "ngx-daterangepicker-material": "^6.0.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.0",
